Eliminate need for "--add-opens" to use MessageFmt on newer JDK's.